# claw

./: LICENSE  README.md  cabal.project
.circleci/: config.yml
claw/: CHANGELOG.md  claw.cabal
claw-example/: README.md  claw-example.cabal
claw-example/app/: Main.hs
claw-example/app-th/: Main.hs
claw-example/src/Example/: Core.hs  Options.hs
claw-example/src/Example/Options/: State.hs  TH.hs
claw-prettyprinter/: CHANGELOG.md  claw-prettyprinter.cabal
claw-prettyprinter/src/Data/Console/Options/: Help.hs
claw-prettyprinter/src/System/Console/Options/: Failure.hs  Help.hs
claw-prettyprinter/src/System/Console/Options/Failure/: Internal.hs
claw-prettyprinter/src/System/Console/Options/Help/: Internal.hs
claw-prettyprinter/src/System/Console/Options/TH/: Failure.hs
claw/src/Codec/Console/: Options.hs
claw/src/Codec/Console/Options/: Internal.hs
claw/src/Data/Console/: Option.hs  Options.hs
claw/src/Data/Console/Option/: Internal.hs
claw/src/Data/Console/Options/: Internal.hs
claw/src/Data/Console/Options/Lazy/: Internal.hs
claw/src/Data/Console/Options/Strict/: Internal.hs
claw/src/Data/Primitive/ByteArray/: Levenshtein.hs
claw/src/System/Console/: Options.hs
claw/src/System/Console/Options/: Internal.hs  TH.hs
claw/src/System/OsString/: Custom.hs
claw/test/compliance/: Main.hs
claw/test/compliance/Test/: Codec.hs  System.hs
docs/: claw-prettyprinter  claw-prettyprinter-0.1.0.0  doc-index.html  doc-index.json  index.html
docs/claw/: Codec-Console-Options.html  Data-Console-Options.html  System-Console-Options.html  claw.haddock  doc-index.html  doc-index.json  index.html
docs/claw-0.1.0.0-inplace/: Codec-Console-Options.html  Data-Console-Option.html  README.md  System-Console-Options-TH.html  doc-index.html  index.html
docs/claw-0.1.0.0-inplace/src/: Codec.Console.Options.Internal.html  Codec.Console.Options.html  Data.Console.Option.Internal.html  Data.Console.Option.html  System.Console.Options.TH.html  System.Console.Options.html
docs/claw-prettyprinter/: CHANGELOG.md  Data-Console-Options-Help.html  System-Console-Options-Failure.html  claw-prettyprinter.haddock  doc-index.html  doc-index.json  index.html
docs/claw-prettyprinter-0.1.0.0-inplace/: claw-prettyprinter.haddock  doc-index.html
docs/claw-prettyprinter-0.1.0.0-inplace/src/: System.Console.Options.Failure.html  System.Console.Options.Help.html
docs/claw-prettyprinter/src/: Data.Console.Options.Help.html  System.Console.Options.Failure.html
docs/claw/src/: Codec.Console.Options.html  Data.Console.Option.Internal.html  Data.Console.Options.Internal.html  Data.Console.Options.html  Data.Primitive.ByteArray.Levenshtein.html  System.Console.Options.html
haddocks/: claw  claw-0.1.0.0  doc-index.html  index.html
haddocks/claw-0.1.0.0-inplace/: System-Console-Options.html  claw.haddock  doc-index.json
haddocks/claw-0.1.0.0-inplace/src/: Data.Console.Options.Lazy.Internal.html  Data.Console.Options.Strict.Internal.html  Data.Primitive.ByteArray.Levenshtein.html  System.Console.Options.Internal.html
haddocks/claw-prettyprinter-0.1.0.0-inplace/: README.md  System-Console-Options-Failure.html  System-Console-Options-Help.html  System-Console-Options-TH-Failure.html  doc-index.json  index.html
haddocks/claw-prettyprinter-0.1.0.0-inplace/src/: System.Console.Options.Failure.Internal.html  System.Console.Options.Help.Internal.html  System.Console.Options.TH.Failure.html
