cabal-version:       2.2

name:                claw-example
version:             0.1.0.0
license:             BSD-3-Clause
author:              Oleksii Divak
maintainer:          Oleksii Divak <frozenwitness@gmail.com>
copyright:           (c) 2024 Oleksii Divak
category:            Example
build-type:          Simple

executable example
  main-is:          Main.hs

  other-modules:    Example.Core
                    Example.Options
                    Example.Options.State

  hs-source-dirs:   app
                  , src

  build-depends:    base               >= 4.16 && < 5
                  , claw               >= 0.1 && <= 0.2
                  , claw-prettyprinter >= 0.1 && <= 0.2
                  , prettyprinter      >= 1.7 && <= 1.8
                  , text               >= 2   && <= 2.2

  ghc-options:      -Wall

  default-language: Haskell2010

executable example-th
  main-is:          Main.hs

  other-modules:    Example.Core
                    Example.Options.TH
                    Example.Options.State

  hs-source-dirs:   app-th
                  , src

  build-depends:    base               >= 4.16 && < 5
                  , claw               >= 0.1 && <= 0.2
                  , claw-prettyprinter >= 0.1 && <= 0.2
                  , prettyprinter      >= 1.7 && <= 1.8
                  , text               >= 2   && <= 2.2
                  , template-haskell   >= 2.17 && < 3

  ghc-options:      -Wall

  default-language: Haskell2010
