cabal-version:       2.2

name:                claw-example
version:             0.2.0.0
license:             BSD-3-Clause
author:              Oleksii Divak
maintainer:          Oleksii Divak <frozenwitness@gmail.com>
copyright:           (c) 2024 Oleksii Divak
category:            Example
build-type:          Simple

executable example
  main-is:          Main.hs

  other-modules:    Example.Core
                    Example.Options
                    Example.Options.State

  hs-source-dirs:   app
                  , src

  build-depends:    base               >= 4.16 && < 5
                  , claw               >= 0.2 && < 0.3
                  , claw-prettyprinter >= 0.2 && < 0.3
                  , filepath           >= 1.5 && < 1.6
                  , os-string          >= 2.0.5 && < 3
                  , prettyprinter      >= 1.7 && < 1.8
                  , process            >= 1.6.26 && < 1.7
                  , text               >= 2 && < 2.2

  ghc-options:      -Wall

  default-language: Haskell2010
