cabal-version:       2.2

name:                claw-prettyprinter
version:             0.2.0.0
synopsis:            claw + prettyprinter
description:         Composing command-line help documents and rendering
                     parsing failures using prettyprinter.
license:             BSD-3-Clause
author:              Oleksii Divak
maintainer:          Oleksii Divak <frozenwitness@gmail.com>
copyright:           (c) 2024 Oleksii Divak
category:            CLI
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                     README.md

library
  exposed-modules:  Data.Console.Options.Help

                    System.Console.Options.Failure

  hs-source-dirs:   src

  build-depends:    base             >= 4.12 && < 5
                  , bytestring       >= 0.12 && < 0.13
                  , claw             >= 0.2 && < 0.3
                  , prettyprinter    >= 1.7 && < 1.8
                  , text-short       >= 0.1.6 && < 0.2

  ghc-options:      -Wall

  default-language: Haskell2010



source-repository head
  type: git
  location: https://github.com/BurningWitness/claw
