cabal-version:       2.2

name:                claw
version:             0.1.0.0
x-revision:          1
synopsis:            Command-line options
description:         Ruthless minimal command-line option parser.
license:             BSD-3-Clause
author:              Oleksii Divak
maintainer:          Oleksii Divak <frozenwitness@gmail.com>
copyright:           (c) 2024 Oleksii Divak
category:            CLI
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                     README.md

library
  exposed-modules:  Codec.Console.Options

                    Data.Console.Option

                    System.Console.Options
                    System.Console.Options.TH

  other-modules:    Codec.Console.Options.Internal
                    
                    Data.Console.Option.Internal
                    Data.Console.Options.Lazy.Internal
                    Data.Console.Options.Strict.Internal

                    Data.Primitive.ByteArray.Levenshtein

                    System.Console.Options.Internal

  hs-source-dirs:   src

  build-depends:    base             >= 4.12 && < 5
                  , primitive        >= 0.7 && < 0.10
                  , radix-tree       >= 1 && < 1.2
                  , template-haskell >= 2.17 && < 3
                  , text             >= 2.0 && < 2.2

  ghc-options:      -Wall

  default-language: Haskell2010

test-suite compliance
  type:             exitcode-stdio-1.0

  main-is:          Main.hs

  hs-source-dirs:   test/compliance

  build-depends:    base
                  , hspec >= 2.0 && <= 2.12
                  , claw

  ghc-options:      -Wall

  default-language: Haskell2010



source-repository head
  type: git
  location: git://github.com/BurningWitness/claw.git
