cabal-version:       2.2

name:                claw
version:             0.2.0.0
synopsis:            Command-line options
description:         Ruthless minimal command-line option parser.
license:             BSD-3-Clause
author:              Oleksii Divak
maintainer:          Oleksii Divak <frozenwitness@gmail.com>
copyright:           (c) 2024 Oleksii Divak
category:            CLI
build-type:          Simple
extra-doc-files:     CHANGELOG.md
                     README.md

library
  exposed-modules:  Codec.Console.Options

                    Data.Console.Options

                    System.Console.Options

  other-modules:    Data.Console.Option.Internal
                    Data.Console.Options.Internal

                    Data.Primitive.ByteArray.Levenshtein

  hs-source-dirs:   src

  build-depends:    base             >= 4.12 && < 5
                  , bytestring       >= 0.12 && < 0.13
                  , filepath         >= 1.5 && < 1.6
                  , os-string        >= 2.0.5 && < 3
                  , primitive        >= 0.7 && < 0.10
                  , radix-tree       >= 1 && < 1.2
                  , template-haskell >= 2.17 && < 3
                  , text-short       >= 0.1.6 && < 0.2

  ghc-options:      -Wall

  default-language: Haskell2010

test-suite compliance
  type:             exitcode-stdio-1.0

  main-is:          Main.hs

  other-modules:    Test.Codec
                    Test.System

  hs-source-dirs:   test/compliance

  build-depends:    base
                  , bytestring
                  , claw
                  , filepath
                  , hspec            >= 2.0 && < 2.12
                  , os-string
                  , template-haskell
                  , text-short

  ghc-options:      -Wall

  default-language: Haskell2010



source-repository head
  type: git
  location: https://github.com/BurningWitness/claw
